base/vocbench.statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: vocbench3
  labels:
    app: vocbench3
spec:
  ports:
  - port: 80
    targetPort: 80
    name: web
    protocol: "TCP"
  type: ClusterIP
  selector:
    app: vocbench3
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vocbench3
spec:
  selector:
    matchLabels:
      app: vocbench3 # has to match .spec.template.metadata.labels
  serviceName: "vocbench3"
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: vocbench3 # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: nginx
        image: nginx@sha256:2275af0f20d71b293916f1958f8497f987b8d8fd8113df54635f2a5915002bf1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: proxy
        volumeMounts:
        - mountPath: /etc/nginx 
          readOnly: true
          name: nginx-conf
        - mountPath: /usr/share/nginx/html/
          readOnly: true
          name: index-html
        - mountPath: /var/log/nginx
          name: log
      - name: vocbench3
        readinessProbe:
          httpGet:
            path: /vocbench3
            port: 1979
          initialDelaySeconds: 30
          timeoutSeconds: 60
          periodSeconds: 30
        image: cslovell/vocbench3:8.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1979
          name: web
        volumeMounts:
        - name: voc-vol
          mountPath: /opt/vocbench3/data
        livenessProbe:
          httpGet:
            path: /vocbench3
            port: 1979
          initialDelaySeconds: 30
          timeoutSeconds: 60
          periodSeconds: 30
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf 
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: index-html
        configMap:
          name: index-html
          items: 
            - key: index.html
              path: index.html
      - name: log
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: voc-vol
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 15Gi
---
